--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,9 @@
     <string name="app_name">InventoryManagement</string>
     <string name="sign_in">Sign In</string>
     <string name="sign_up">Sign Up</string>
-    <string name="title_activity_stock">StockActivity</string>
+    <string name="title_activity_stock">Grace Supermarket</string>
+    <string name="title_activty_new_stock">New Item</string>
+    <string name="name">Item name</string>
+    <string name="category">Item category</string>
+    <string name="price">Item price</string>
 </resources>
