Add strings resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="password">password</string>
     <string name="empty_username_password">Username or password is empty</string>
     <string name="user_already_exist">User already exist</string>
+    <string name="user_does_not_exist">User does not exist</string>
 </resources>
